--- a/SID_32/pom.xml
+++ b/SID_32/pom.xml
@@ -28,5 +28,12 @@
         <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
         <version>1.2.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+<dependency>
+    <groupId>org.mongodb</groupId>
+    <artifactId>mongo-java-driver</artifactId>
+    <version>3.10.2</version>
+</dependency>
+    
 </dependencies>
 </project>
