migração mongo main

--- a/SID_32/pom.xml
+++ b/SID_32/pom.xml
@@ -34,6 +34,14 @@
     <artifactId>mongo-java-driver</artifactId>
     <version>3.10.2</version>
 </dependency>
+    <!-- https://mvnrepository.com/artifact/com.mysql.jdbc/org.motechproject.com.mysql.jdbc -->
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.6</version>
+</dependency>
+
     
 </dependencies>
 </project>
