--- a/Android/local.properties
+++ b/Android/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 08 10:25:21 BST 2019
-sdk.dir=C\:\\Users\\Leonardo Rosa\\AppData\\Local\\Android\\Sdk
+#Thu May 09 19:16:45 BST 2019
+sdk.dir=C\:\\Users\\Rita\\AppData\\Local\\Android\\Sdk
