--- a/SID_32/pom.xml
+++ b/SID_32/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>AnimateFX</artifactId>
 			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
-
+	 <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>1.4.7</version>
+	</dependency>
 	</dependencies>
 </project>
