pom e scripts que tinham sido apagados

--- a/SID_32/pom.xml
+++ b/SID_32/pom.xml
@@ -60,5 +60,21 @@
 	    <artifactId>mail</artifactId>
 	    <version>1.4.7</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-engine</artifactId>
+    <version>5.2.0</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.2.0</version>
+    <scope>test</scope>
+</dependency>
+
+	
 	</dependencies>
 </project>
